# cloner

./: .gitignore  Dockerfile  RUN_LOCAL.md  docker-compose.yml  pyproject.toml  requirements.txt  son.txt
app/: config.py  main.py
app/routers/: cloning.py
app/services/: audio_processor.py  tts_model.py
app/static/: index.html
output/jupyter-notebook/: shona-xtts-colab.ipynb
scripts/: build_hf_xtts_dataset.py  download_shona_dataset.py  download_waxal_sna.py  filter_annotated_for_xtts.py  finetune_xtts.py  prepare_dataset.py  prepare_waxal_sna.py  prune_short_wavs.py  segment_dataset.py  swap_to_annotated_dataset.sh
